# hydra-v3

./: Makefile  README.md  config.example.toml  config.toml  go.mod  go.sum
cmd/hydra/: main.go
examples/: distributed_inference.py  single_node_test.py
internal/api/: server.go
internal/api/handlers/: cluster.go  openai.go  vision.go
internal/api/middleware/: auth.go  logger.go
internal/api/types/: openai.go
internal/cluster/: registry.go
internal/config/: config.go
internal/coordinator/: coordinator.go  inference.go  layer_distribution.go  model_manager.go
internal/zmq/: broker.go
scripts/: install-zeromq-windows.ps1  quick-start.ps1  quick-start.sh  run-coordinator.bat  run-coordinator.ps1  run-coordinator.sh  run-worker.bat  run-worker.ps1  run-worker.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1
worker/: pyproject.toml
worker/hydra_worker/: __init__.py  __main__.py  cli.py
worker/hydra_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
worker/hydra_worker/comm/: __init__.py  tensor_protocol.py  zmq_handler.py
worker/hydra_worker/core/: __init__.py  device.py  worker.py
worker/hydra_worker/distributed/: __init__.py  pipeline.py  worker.py
worker/hydra_worker/inference/: engine.py
worker/hydra_worker/models/: __init__.py  partial_loader.py
worker/hydra_worker/models/architecture/: __init__.py
worker/hydra_worker/models/lora/: __init__.py
